# cinterpreter

./: CMakeLists.txt  Makefile  README.md  cinterpreter.cpp  environment.hpp  sysfun.h
test/: test00.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c
